links/nomes-fix

--- a/unused/consemana.html
+++ b/unused/consemana.html
@@ -140,21 +140,21 @@
                         <td>Projetor</td>
                         <td>00-00-0000</td>
                         <td>00:00</td>
-                        <td>&nbsp;<a href="verificar.html"> <i title="Ver todas as informações" class="fa fa-eye fa-lg" aria-hidden="true"></i></a></td>
+                        <td>&nbsp;<a href="Verificar.html"> <i title="Ver todas as informações" class="fa fa-eye fa-lg" aria-hidden="true"></i></a></td>
                     </tr>
                     <tr>
                          <td>2</td>
                          <td>Computador</td>
                          <td>00-00-0000</td>
                          <td>00:00</td>
-                         <td>&nbsp;<a href="verificar.html"> <i title="Ver todas as informações" class="fa fa-eye fa-lg" aria-hidden="true"></i></a></td>
+                         <td>&nbsp;<a href="Verificar.html"> <i title="Ver todas as informações" class="fa fa-eye fa-lg" aria-hidden="true"></i></a></td>
                     </tr>
                      <tr>
                          <td>3</td>
                          <td>Quadro Interativo</td>
                          <td>00-00-0000</td>
                          <td>00:00</td>
-                         <td>&nbsp;<a href="verificar.html"> <i title="Ver todas as informações" class="fa fa-eye fa-lg" aria-hidden="true"></i></a></td>
+                         <td>&nbsp;<a href="Verificar.html"> <i title="Ver todas as informações" class="fa fa-eye fa-lg" aria-hidden="true"></i></a></td>
                     </tr>
                      </tbody>
                 </table>
