--- a/unused/blank.html
+++ b/unused/blank.html
@@ -115,7 +115,7 @@
       *********************************************************************************************************************************************************** -->
       <!--main content start-->
       <section id="main-content">
-          <section class="wrapper site-min-height" id="wrapping">
+          <section class="wrapper" id="wrapping">
           	
             <h3><i class="fa fa-angle-right"></i> Página inicial</h3>
           	
